--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Greta's Flatiron Blog
+subtitle: day.each do |code| 
+author: Greta Moseson
 simple_search: https://www.google.com/search
-description:
+description: Posts relate to new concepts and experiences I encounter while learing to program.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
